--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "lodash": "^4.17.20",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
