--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "commerce-backstage",
   "version": "0.1.0",
+  "homepage": "https://ruaxin.github.io/ECB-website/",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
